# leptos-animated-for

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.github/actions/setup/: action.yaml
.github/workflows/: review.yaml
examples/csr/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
examples/csr/src/: button.rs  circle.rs  main.rs  style.css
examples/ssr/: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
examples/ssr/src/: app.rs  button.rs  fallback.rs  lib.rs  main.rs
src/: animated_el.rs  animator.rs  lib.rs  untracked_classes.rs  utils.rs
