[package]
name = "leptos_animated_for"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/brofrain/leptos-animated-for"
license = "MIT"
description = "<AnimatedFor /> component utilizing FLIP position transitions for Leptos"
keywords = ["leptos", "animations", "dom", "web", "wasm"]

[dependencies]
cfg-if = "1.0.0"
futures = "0.3.29"
leptos = { version = "0.5.4" }
wasm-bindgen = { version = "0.2.89" }
web-sys = { version = "0.3.66", features = ["DomRect"] }

[features]
ssr = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
