[package]
name = "leptos_animated_for"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/brofrain/leptos-animated-for"
license = "MIT"
description = "<AnimatedFor /> component utilizing FLIP position transitions for Leptos"
keywords = ["leptos", "animations", "dom", "web", "wasm"]

[dependencies]
cfg-if = "1.0.0"
futures = "0.3.30"
leptos = { version = "0.6.3" }
wasm-bindgen = { version = "0.2.90" }
web-sys = { version = "0.3.67", features = ["DomRect"] }

[features]
ssr = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
